# XEStudio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
depend/lib/win/release/: Zipper-static.lib  zlib.lib
launcher/: CMakeLists.txt  main.cpp
plugins/: CMakeLists.txt
plugins/AIPlugin/: AIDockWidget.cpp  AIDockWidget.h  AIPlugin.cpp  AIPlugin.h  BTGraphicsItem.cpp  BTGraphicsItem.h  BTGraphicsScene.cpp  BTGraphicsScene.h  BTGraphicsSocket.cpp  BTGraphicsSocket.h  CMakeLists.txt  FSMGraphicsItem.cpp  FSMGraphicsItem.h  FSMGraphicsScene.cpp  FSMGraphicsScene.h  FSMGraphicsSocket.cpp  FSMGraphicsSocket.h  Global.h  GraphicsItem.cpp  GraphicsItem.h  GraphicsScene.cpp  GraphicsScene.h  GraphicsSocket.cpp  GraphicsSocket.h  GraphicsView.cpp  GraphicsView.h  GraphicsWidget.cpp  GraphicsWidget.h
plugins/AssetsPlugin/: AssetImporter.cpp  AssetImporter.h  AssetTextureImporter.cpp  AssetTextureImporter.h  AssetsDockWidget.cpp  AssetsDockWidget.h  AssetsDockWidget.ui  AssetsPlugin.cpp  AssetsPlugin.h  AssetsPlugin.qrc  CMakeLists.txt  Global.h
plugins/MetaPlugin/: ArrayMetaWidget.cpp  ArrayMetaWidget.h  ArrayMetaWidget.ui  BoolMetaWidget.cpp  BoolMetaWidget.h  CMakeLists.txt  FloatMetaWidget.cpp  FloatMetaWidget.h  Global.h  IntgerMetaWidget.cpp  IntgerMetaWidget.h  MapMetaWidget.cpp  MapMetaWidget.h  MapMetaWidget.ui  MetaPlugin.cpp  MetaPlugin.h  PairMetaWidget.cpp  PairMetaWidget.h  QuatMetaWidget.cpp  QuatMetaWidget.h  QuatMetaWidget.ui  SelectTypeMetaWidget.cpp  SelectTypeMetaWidget.h  StringMetaWidget.cpp  StringMetaWidget.h  Vec2MetaWidget.cpp  Vec2MetaWidget.h  Vec2MetaWidget.ui  Vec3MetaWidget.cpp  Vec3MetaWidget.h  Vec3MetaWidget.ui  Vec4MetaWidget.cpp  Vec4MetaWidget.h  Vec4MetaWidget.ui
src/: CMakeLists.txt  DarkStyle.h  DarkStyle.qrc  Event.h  Global.h  ProCreateDialog.cpp  ProCreateDialog.h  ProCreateDialog.ui  ProListWidgetItem.cpp  ProListWidgetItem.h  ProListWidgetItem.ui  ProMainWindow.cpp  ProMainWindow.h  ProMainWindow.ui  Type.h  XESApplication.cpp  XESApplication.h  XESAssetsService.cpp  XESAssetsService.h  XESDockCmd.cpp  XESDockCmd.h  XESDockWidget.cpp  XESDockWidget.h  XESFramework.cpp  XESFramework.h  XESMainWindow.cpp  XESMainWindow.h  XESMetaService.cpp  XESMetaService.h  XESMetaWidget.cpp  XESMetaWidget.h  XESPluginService.cpp  XESPluginService.h  XEStudio.h
