cmake_minimum_required (VERSION 3.12)

project ("AIPlugin")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG}/plugins/AIPlugin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/plugins/AIPlugin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE}/plugins/AIPlugin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/plugins/AIPlugin)


FILE(GLOB_RECURSE SRC_FILES *.cpp *.qrc *.ui)
add_library(AIPlugin SHARED ${SRC_FILES})

target_link_libraries(AIPlugin PRIVATE Qt5::Widgets Qt5::Sql XE XEStudio COIN OGDF)
