cmake_minimum_required (VERSION 3.12)

project ("AssetsPlugin")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG}/plugins/AssetsPlugin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/plugins/AssetsPlugin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE}/plugins/AssetsPlugin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/plugins/AssetsPlugin)


FILE(GLOB_RECURSE SRC_FILES *.cpp *.qrc *.ui)
add_library(AssetsPlugin SHARED ${SRC_FILES})

target_link_libraries(AssetsPlugin PRIVATE Qt5::Widgets Qt5::Sql XE XEStudio)
