cmake_minimum_required (VERSION 3.12)

project ("MetaPlugin")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG}/plugins/MetaPlugin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/plugins/MetaPlugin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE}/plugins/MetaPlugin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/plugins/MetaPlugin)


FILE(GLOB_RECURSE SRC_FILES *.cpp *.qrc *.ui)
add_library(MetaPlugin SHARED ${SRC_FILES})

target_link_libraries(MetaPlugin PRIVATE Qt5::Widgets Qt5::Sql XE XEStudio)
